--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "host_permissions": [
       "https://*/*"
     ],
-    "permissions": ["scripting", "storage"]
+    "permissions": ["scripting", "activeTab", "tabs", "sidePanel"]
   }
 }
