--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "prepare": "husky install",
+    "format": "prettier --write ."
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "plasmo": "0.89.1",
@@ -20,6 +27,8 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.2.10",
     "prettier": "3.2.4",
     "typescript": "5.3.3"
   },
@@ -27,6 +36,11 @@
     "host_permissions": [
       "https://*/*"
     ],
-    "permissions": ["scripting", "activeTab", "tabs", "sidePanel"]
+    "permissions": [
+      "scripting",
+      "activeTab",
+      "tabs",
+      "sidePanel"
+    ]
   }
 }
