--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.20",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
     "prettier": "3.2.4",
+    "tailwindcss": "^3.4.12",
     "typescript": "5.3.3"
   },
   "manifest": {
