--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
-    "package": "plasmo package"
+    "package": "plasmo package",
+    "prepare": "husky install",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "plasmo": "0.89.1",
@@ -20,13 +22,22 @@
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.20",
+    "husky": "^8.0.0",
+    "postcss": "^8.4.47",
     "prettier": "3.2.4",
+    "tailwindcss": "^3.4.12",
     "typescript": "5.3.3"
   },
   "manifest": {
     "host_permissions": [
       "https://*/*"
     ],
-    "permissions": ["scripting", "activeTab", "tabs", "sidePanel"]
+    "permissions": [
+      "scripting",
+      "activeTab",
+      "tabs",
+      "sidePanel"
+    ]
   }
 }
