--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "plasmo": "0.89.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
