--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
     "classnames": "^2.5.1",
-    "plasmo": "0.89.1",
+    "framer-motion": "^11.11.9",
+    "plasmo": "0.89.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
